compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_segment_unit_unit.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 110
expression: "let x = <<1:unit(2)-unit(5)>> x"
---
----- SOURCE CODE
let x = <<1:unit(2)-unit(5)>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:21
  │
1 │ let x = <<1:unit(2)-unit(5)>> x
  │                     ^^^^^^^ This is an extra unit specifier

Hint: A BitArray segment can have at most 1 unit.
See: https://tour.rakun.run/data-types/bit-arrays/
